add simple config for exporters and modules

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
   <name>tashkewey</name>
   <description>Gateway for Tasks.</description>
+  <url>https://github.com/matteobertozzi/tashkewey</url>
 
   <repositories>
     <repository>
@@ -29,7 +30,6 @@
     </repository>
   </repositories>
 
-  <url>https://github.com/matteobertozzi/tashkewey</url>
   <licenses>
     <license>
       <name>The Apache License, Version 2.0</name>
@@ -54,12 +54,12 @@
     <rednaco.version>3.0.0-SNAPSHOT</rednaco.version>
     <easer.insights.version>0.1.6-SNAPSHOT</easer.insights.version>
 
-    <netty.version>4.1.106.Final</netty.version>
+    <netty.version>4.1.107.Final</netty.version>
     <swagger.version>2.1.20</swagger.version>
     <jctools.version>4.0.2</jctools.version>
     <tika.version>2.9.1</tika.version>
 
-    <junit.version>5.10.1</junit.version>
+    <junit.version>5.10.2</junit.version>
 
     <maven.gpg.version>3.1.0</maven.gpg.version>
     <maven.jar.version>3.3.0</maven.jar.version>
@@ -100,6 +100,11 @@
     <dependency>
       <groupId>io.github.matteobertozzi</groupId>
       <artifactId>easer-insights-profiler</artifactId>
+      <version>${easer.insights.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.matteobertozzi</groupId>
+      <artifactId>easer-insights-influx</artifactId>
       <version>${easer.insights.version}</version>
     </dependency>
 
