add missing content-type, bind config, auth, ...

--- a/tashkewey-netty/pom.xml
+++ b/tashkewey-netty/pom.xml
@@ -54,7 +54,7 @@
     <rednaco.version>3.0.0-SNAPSHOT</rednaco.version>
     <easer.insights.version>0.1.6-SNAPSHOT</easer.insights.version>
 
-    <netty.version>4.1.109.Final</netty.version>
+    <netty.version>4.1.110.Final</netty.version>
     <swagger.version>2.1.21</swagger.version>
     <jctools.version>4.0.2</jctools.version>
     <tika.version>2.9.1</tika.version>
@@ -65,11 +65,11 @@
     <maven.jar.version>3.4.1</maven.jar.version>
     <maven.compiler.version>3.13.0</maven.compiler.version>
     <maven.source.version>3.3.1</maven.source.version>
-    <maven.javadoc.version>3.6.3</maven.javadoc.version>
+    <maven.javadoc.version>3.7.0</maven.javadoc.version>
     <maven.surefire.version>3.2.5</maven.surefire.version>
     <maven.failsafe.version>3.2.5</maven.failsafe.version>
     <maven.dependency.version>3.6.1</maven.dependency.version>
-    <nexus.staging.maven.version>1.6.13</nexus.staging.maven.version>
+    <nexus.staging.maven.version>1.7.0</nexus.staging.maven.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -93,6 +93,11 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-codec-http</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-codec-http2</artifactId>
       <version>${netty.version}</version>
     </dependency>
     <dependency>
