--- a/tashkewey-core/pom.xml
+++ b/tashkewey-core/pom.xml
@@ -58,6 +58,9 @@
     <jctools.version>4.0.2</jctools.version>
     <tika.version>2.9.2</tika.version>
 
+    <jwt.version>4.4.0</jwt.version>
+    <jwk.rsa.version>0.22.1</jwk.rsa.version>
+
     <junit.version>5.10.2</junit.version>
 
     <maven.gpg.version>3.2.4</maven.gpg.version>
@@ -65,9 +68,9 @@
     <maven.compiler.version>3.13.0</maven.compiler.version>
     <maven.source.version>3.3.1</maven.source.version>
     <maven.javadoc.version>3.7.0</maven.javadoc.version>
-    <maven.surefire.version>3.2.5</maven.surefire.version>
-    <maven.failsafe.version>3.2.5</maven.failsafe.version>
-    <maven.dependency.version>3.6.1</maven.dependency.version>
+    <maven.surefire.version>3.3.0</maven.surefire.version>
+    <maven.failsafe.version>3.3.0</maven.failsafe.version>
+    <maven.dependency.version>3.7.0</maven.dependency.version>
     <nexus.staging.maven.version>1.7.0</nexus.staging.maven.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -126,12 +129,24 @@
     <dependency>
       <groupId>com.auth0</groupId>
       <artifactId>java-jwt</artifactId>
-      <version>4.4.0</version>
+      <version>${jwt.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.auth0</groupId>
       <artifactId>jwks-rsa</artifactId>
-      <version>0.22.1</version>
+      <version>${jwk.rsa.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- Unit Tests Related -->
