--- a/tashkewey-core/pom.xml
+++ b/tashkewey-core/pom.xml
@@ -67,11 +67,11 @@
     <maven.jar.version>3.4.2</maven.jar.version>
     <maven.compiler.version>3.13.0</maven.compiler.version>
     <maven.source.version>3.3.1</maven.source.version>
-    <maven.javadoc.version>3.7.0</maven.javadoc.version>
-    <maven.surefire.version>3.3.0</maven.surefire.version>
-    <maven.failsafe.version>3.3.0</maven.failsafe.version>
+    <maven.javadoc.version>3.8.0</maven.javadoc.version>
+    <maven.surefire.version>3.3.1</maven.surefire.version>
+    <maven.failsafe.version>3.3.1</maven.failsafe.version>
     <maven.dependency.version>3.7.1</maven.dependency.version>
-    <nexus.staging.maven.version>1.7.0</nexus.staging.maven.version>
+    <nexus.staging.maven.version>1.6.14</nexus.staging.maven.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -107,6 +107,11 @@
     <dependency>
       <groupId>io.github.matteobertozzi</groupId>
       <artifactId>easer-insights-influx</artifactId>
+      <version>${easer.insights.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.matteobertozzi</groupId>
+      <artifactId>easer-insights-aws-cloudwatch</artifactId>
       <version>${easer.insights.version}</version>
     </dependency>
 
@@ -171,15 +176,11 @@
   </dependencies>
 
   <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
+  <snapshotRepository>
+    <id>ossrh</id>
+    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+  </snapshotRepository>
+</distributionManagement>
 
   <build>
     <plugins>
@@ -211,6 +212,8 @@
               <mode>development</mode>
               <builtBy>${user.name}</builtBy>
               <buildTimestamp>${maven.build.timestamp}</buildTimestamp>
+              <gitBranch>${git.branch}</gitBranch>
+              <gitHash>${git.hash}</gitHash>
             </manifestEntries>
           </archive>
         </configuration>
