--- a/demo-service/pom.xml
+++ b/demo-service/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.matteobertozzi</groupId>
   <artifactId>demo-service</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
 
   <name>demo-service</name>
   <description>Tashkewey demo service</description>
