--- a/tashkewey-netty/pom.xml
+++ b/tashkewey-netty/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.matteobertozzi</groupId>
   <artifactId>tashkewey-netty</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
 
   <name>tashkewey-netty</name>
   <description>Gateway for Tasks - Netty Server</description>
