--- a/tashkewey-core/pom.xml
+++ b/tashkewey-core/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.matteobertozzi</groupId>
   <artifactId>tashkewey-core</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.1</version>
 
   <name>tashkewey-core</name>
   <description>Gateway for Tasks - core/common logic.</description>
@@ -51,8 +51,8 @@
   </developers>
 
   <properties>
-    <rednaco.version>3.0.0</rednaco.version>
-    <easer.insights.version>1.0.0</easer.insights.version>
+    <rednaco.version>3.0.1</rednaco.version>
+    <easer.insights.version>1.0.1-SNAPSHOT</easer.insights.version>
 
     <caffeine.version>3.1.8</caffeine.version>
     <jctools.version>4.0.2</jctools.version>
@@ -67,9 +67,9 @@
     <maven.jar.version>3.4.2</maven.jar.version>
     <maven.compiler.version>3.13.0</maven.compiler.version>
     <maven.source.version>3.3.1</maven.source.version>
-    <maven.javadoc.version>3.10.1</maven.javadoc.version>
-    <maven.surefire.version>3.5.1</maven.surefire.version>
-    <maven.failsafe.version>3.5.1</maven.failsafe.version>
+    <maven.javadoc.version>3.11.1</maven.javadoc.version>
+    <maven.surefire.version>3.5.2</maven.surefire.version>
+    <maven.failsafe.version>3.5.2</maven.failsafe.version>
     <maven.dependency.version>3.8.1</maven.dependency.version>
     <nexus.staging.maven.version>1.7.0</nexus.staging.maven.version>
 
