--- a/tashkewey-core/pom.xml
+++ b/tashkewey-core/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.github.matteobertozzi</groupId>
   <artifactId>tashkewey-core</artifactId>
-  <version>0.1.8</version>
+  <version>0.1.9</version>
 
   <name>tashkewey-core</name>
   <description>Gateway for Tasks - core/common logic.</description>
@@ -54,11 +54,11 @@
     <rednaco.version>3.0.5</rednaco.version>
     <easer.insights.version>1.0.5</easer.insights.version>
 
-    <caffeine.version>3.1.8</caffeine.version>
+    <caffeine.version>3.2.0</caffeine.version>
     <jctools.version>4.0.2</jctools.version>
-    <tika.version>3.0.0</tika.version>
+    <tika.version>3.1.0</tika.version>
 
-    <jwt.version>4.4.0</jwt.version>
+    <jwt.version>4.5.0</jwt.version>
     <jwk.rsa.version>0.22.1</jwk.rsa.version>
 
     <junit.version>5.11.4</junit.version>
@@ -136,6 +136,10 @@
       <artifactId>java-jwt</artifactId>
       <version>${jwt.version}</version>
       <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+        </exclusion>
         <exclusion>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
